doc/logfile.txt
Class documentation
<---- javadoc command: ---->
C:\Program Files (x86)\BlueJ\jdk\bin\javadoc.exe
-author
-version
-nodeprecated
-package
-noindex
-notree
-nohelp
-nonavbar
-source
1.8
-classpath
C:\Program Files (x86)\BlueJ\lib\bluejcore.jar;C:\Program Files (x86)\BlueJ\lib\junit-4.8.2.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-core.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-device.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-gpio-extension.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-service.jar;D:\BlueJ Project Files\Mark
-d
D:\BlueJ Project Files\Mark\doc
-encoding
UTF-8
-charset
UTF-8
-docletpath
C:\Program Files (x86)\BlueJ\lib\bjdoclet.jar
-doclet
bluej.doclet.doclets.formats.html.HtmlDoclet
D:\BlueJ Project Files\Mark\LoginSession.java
<---- end of javadoc command ---->
Loading source file D:\BlueJ Project Files\Mark\LoginSession.java...
Constructing Javadoc information...
Standard Doclet version 1.8.0_40
Building tree for all the packages and classes...
Generating D:\BlueJ Project Files\Mark\doc\LoginSession.html...
D:\BlueJ Project Files\Mark\TextToSpeech.java:2: error: package com.sun.speech.freetts does not exist
import com.sun.speech.freetts.Voice;
                             ^
D:\BlueJ Project Files\Mark\TextToSpeech.java:3: error: package com.sun.speech.freetts does not exist
import com.sun.speech.freetts.VoiceManager;
                             ^
D:\BlueJ Project Files\Mark\TextToSpeech.java:7: error: cannot find symbol
    VoiceManager freettsVM;
    ^
  symbol:   class VoiceManager
  location: class TextToSpeech
D:\BlueJ Project Files\Mark\TextToSpeech.java:8: error: cannot find symbol
    Voice freettsVoice;
    ^
  symbol:   class Voice
  location: class TextToSpeech
D:\BlueJ Project Files\Mark\TestGoogleSea.java:4: error: package com.google.gson does not exist
import com.google.gson.Gson;
                      ^
Generating D:\BlueJ Project Files\Mark\doc\package-frame.html...
Generating D:\BlueJ Project Files\Mark\doc\package-summary.html...
Generating D:\BlueJ Project Files\Mark\doc\constant-values.html...
Building index for all the packages and classes...
Building index for all classes...
Generating D:\BlueJ Project Files\Mark\doc\allclasses-frame.html...
Generating D:\BlueJ Project Files\Mark\doc\allclasses-noframe.html...
Generating D:\BlueJ Project Files\Mark\doc\index.html...
Generating D:\BlueJ Project Files\Mark\doc\stylesheet.css...
5 errors
